--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,6 +3,8 @@ when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 
 == NOTES TO LATER ==
+check doctrine:schema:validate if there is any problems
+on cancel order, is the delivered mail sent, that seems like a bug
 update translations with symfony command
 match integration facebook, share match
 add custom fields on profiles
