--- a/src/Club/NewsBundle/Resources/translations/messages.da.xlf
+++ b/src/Club/NewsBundle/Resources/translations/messages.da.xlf
@@ -1,21 +1,35 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
   <file source-language="da" datatype="plaintext" original="file.ext">
     <body>
       <trans-unit id="1">
-        <source>News</source> <target state="needs-translation">Nyheder</target> </trans-unit>
+        <source>News</source>
+        <target>Nyheder</target>
+      </trans-unit>
       <trans-unit id="2">
-        <source>Create ticker</source> <target state="needs-translation">Opret ticker</target> </trans-unit>
+        <source>Create ticker</source>
+        <target>Opret ticker</target>
+      </trans-unit>
       <trans-unit id="3">
-        <source>Ticker</source> <target state="needs-translation">Ticker</target> </trans-unit>
+        <source>Ticker</source>
+        <target>Ticker</target>
+      </trans-unit>
       <trans-unit id="4">
-        <source>Author</source> <target state="needs-translation">Forfatter</target> </trans-unit>
+        <source>Author</source>
+        <target>Forfatter</target>
+      </trans-unit>
       <trans-unit id="5">
-        <source>Created at</source> <target state="needs-translation">Oprettet den</target> </trans-unit>
+        <source>Created at</source>
+        <target>Oprettet den</target>
+      </trans-unit>
       <trans-unit id="6">
-        <source>Action</source> <target state="needs-translation">Handling</target> </trans-unit>
+        <source>Action</source>
+        <target>Handling</target>
+      </trans-unit>
       <trans-unit id="7">
-        <source>There are no tickers.</source> <target state="needs-translation">Der er ingen tickers.</target> </trans-unit>
+        <source>There are no tickers.</source>
+        <target>Der er ingen tickers.</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
