--- a/src/Club/RankingBundle/Resources/translations/messages.da.xlf
+++ b/src/Club/RankingBundle/Resources/translations/messages.da.xlf
@@ -1,81 +1,155 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
   <file source-language="da" datatype="plaintext" original="file.ext">
     <body>
       <trans-unit id="1">
-        <source>Ranking, %name%</source> <target state="needs-translation">Rangliste, %name%</target> </trans-unit>
+        <source>Ranking, %name%</source>
+        <target>Rangliste, %name%</target>
+      </trans-unit>
       <trans-unit id="2">
-        <source>When you have played in this ranking, insert the match result in order to update the ranking list.</source> <target state="needs-translation">Når du har spillet i denne rangliste, indsæt kamp resultatet for at opdatere ranglisten.</target> </trans-unit>
+        <source>When you have played in this ranking, insert the match result in order to update the ranking list.</source>
+        <target>Når du har spillet i denne rangliste, indsæt kamp resultatet for at opdatere ranglisten.</target>
+      </trans-unit>
       <trans-unit id="3">
-        <source>Ranking</source> <target state="needs-translation">Rangering</target> </trans-unit>
+        <source>Ranking</source>
+        <target>Rangering</target>
+      </trans-unit>
       <trans-unit id="4">
-        <source>Create rule</source> <target state="needs-translation">Opret regl</target> </trans-unit>
+        <source>Create rule</source>
+        <target>Opret regl</target>
+      </trans-unit>
       <trans-unit id="5">
-        <source>Name</source> <target state="needs-translation">Navn</target> </trans-unit>
+        <source>Name</source>
+        <target>Navn</target>
+      </trans-unit>
       <trans-unit id="6">
-        <source>Point won</source> <target state="needs-translation">Point vundet</target> </trans-unit>
+        <source>Point won</source>
+        <target>Point vundet</target>
+      </trans-unit>
       <trans-unit id="7">
-        <source>Point lost</source> <target state="needs-translation">Point tabt</target> </trans-unit>
+        <source>Point lost</source>
+        <target>Point tabt</target>
+      </trans-unit>
       <trans-unit id="8">
-        <source>Same player</source> <target state="needs-translation">Samme spiller</target> </trans-unit>
+        <source>Same player</source>
+        <target>Samme spiller</target>
+      </trans-unit>
       <trans-unit id="9">
-        <source>Created at</source> <target state="needs-translation">Oprettet den</target> </trans-unit>
+        <source>Created at</source>
+        <target>Oprettet den</target>
+      </trans-unit>
       <trans-unit id="10">
-        <source>Action</source> <target state="needs-translation">Handling</target> </trans-unit>
+        <source>Action</source>
+        <target>Handling</target>
+      </trans-unit>
       <trans-unit id="11">
-        <source>There are no rules.</source> <target state="needs-translation">Der er ingen regler.</target> </trans-unit>
+        <source>There are no rules.</source>
+        <target>Der er ingen regler.</target>
+      </trans-unit>
       <trans-unit id="12">
-        <source>Insert match</source> <target state="needs-translation">Indsæt kamp</target> </trans-unit>
+        <source>Insert match</source>
+        <target>Indsæt kamp</target>
+      </trans-unit>
       <trans-unit id="13">
-        <source>There are no rankings.</source> <target state="needs-translation">Der er ingen ranglister.</target> </trans-unit>
+        <source>There are no rankings.</source>
+        <target>Der er ingen ranglister.</target>
+      </trans-unit>
       <trans-unit id="14">
-        <source>Ranking info</source> <target state="needs-translation">Rangliste info</target> </trans-unit>
+        <source>Ranking info</source>
+        <target>Rangliste info</target>
+      </trans-unit>
       <trans-unit id="15">
-        <source>Period</source> <target state="needs-translation">Periode</target> </trans-unit>
+        <source>Period</source>
+        <target>Periode</target>
+      </trans-unit>
       <trans-unit id="16">
-        <source>Ranking type</source> <target state="needs-translation">Rangliste type</target> </trans-unit>
+        <source>Ranking type</source>
+        <target>Rangliste type</target>
+      </trans-unit>
       <trans-unit id="17">
-        <source>Invite only</source> <target state="needs-translation">Inviter kun</target> </trans-unit>
-      <trans-unit id="18" approved="yes">
-        <source>Open for all</source> <target state="translated">Åben for alle</target> </trans-unit>
+        <source>Invite only</source>
+        <target>Inviter kun</target>
+      </trans-unit>
+      <trans-unit id="18">
+        <source>Open for all</source>
+        <target>Åben for alle</target>
+      </trans-unit>
       <trans-unit id="19">
-        <source>Sets per match</source> <target state="needs-translation">Sæt per kamp</target> </trans-unit>
+        <source>Sets per match</source>
+        <target>Sæt per kamp</target>
+      </trans-unit>
       <trans-unit id="20">
-        <source>Point for victory</source> <target state="needs-translation">Point for sejr</target> </trans-unit>
+        <source>Point for victory</source>
+        <target>Point for sejr</target>
+      </trans-unit>
       <trans-unit id="21">
-        <source>Point for defeat</source> <target state="needs-translation">Point for nederlag</target> </trans-unit>
-      <trans-unit id="22" approved="yes">
-        <source>Matches with same opponent</source> <target state="translated">Kampe med samme modstander</target> </trans-unit>
+        <source>Point for defeat</source>
+        <target>Point for nederlag</target>
+      </trans-unit>
+      <trans-unit id="22">
+        <source>Matches with same opponent</source>
+        <target>Kampe med samme modstander</target>
+      </trans-unit>
       <trans-unit id="23">
-        <source>Rank</source> <target state="needs-translation">Rank</target> </trans-unit>
+        <source>Rank</source>
+        <target>Rank</target>
+      </trans-unit>
       <trans-unit id="24">
-        <source>Team</source> <target state="needs-translation">Hold</target> </trans-unit>
+        <source>Team</source>
+        <target>Hold</target>
+      </trans-unit>
       <trans-unit id="25">
-        <source>Played</source> <target state="needs-translation">Spillet</target> </trans-unit>
+        <source>Played</source>
+        <target>Spillet</target>
+      </trans-unit>
       <trans-unit id="26">
-        <source>Won</source> <target state="needs-translation">Vundet</target> </trans-unit>
+        <source>Won</source>
+        <target>Vundet</target>
+      </trans-unit>
       <trans-unit id="27">
-        <source>Lost</source> <target state="needs-translation">Tabt</target> </trans-unit>
+        <source>Lost</source>
+        <target>Tabt</target>
+      </trans-unit>
       <trans-unit id="28">
-        <source>Won %</source> <target state="needs-translation">Vundet %</target> </trans-unit>
+        <source>Won %</source>
+        <target>Vundet %</target>
+      </trans-unit>
       <trans-unit id="29">
-        <source>Point</source> <target state="needs-translation">Point</target> </trans-unit>
+        <source>Point</source>
+        <target>Point</target>
+      </trans-unit>
       <trans-unit id="30">
-        <source>No teams in the league.</source> <target state="needs-translation">Ingen hold i denne liga.</target> </trans-unit>
+        <source>No teams in the league.</source>
+        <target>Ingen hold i denne liga.</target>
+      </trans-unit>
       <trans-unit id="31">
-        <source>Back to ranking</source> <target state="needs-translation">Tilbage til rangliste</target> </trans-unit>
+        <source>Back to ranking</source>
+        <target>Tilbage til rangliste</target>
+      </trans-unit>
       <trans-unit id="32">
-        <source>Add players to ranking</source> <target state="needs-translation">Tilføj spiller til rangliste</target> </trans-unit>
+        <source>Add players to ranking</source>
+        <target>Tilføj spiller til rangliste</target>
+      </trans-unit>
       <trans-unit id="33">
-        <source>Add player</source> <target state="needs-translation">Tilføj spiller</target> </trans-unit>
+        <source>Add player</source>
+        <target>Tilføj spiller</target>
+      </trans-unit>
       <trans-unit id="34">
-        <source>Here you can add players for this tournament.</source> <target state="needs-translation">Her kan du tilføje spillere til denne turnering.</target> </trans-unit>
+        <source>Here you can add players for this tournament.</source>
+        <target>Her kan du tilføje spillere til denne turnering.</target>
+      </trans-unit>
       <trans-unit id="35">
-        <source>Number</source> <target state="needs-translation">Nummer</target> </trans-unit>
+        <source>Number</source>
+        <target>Nummer</target>
+      </trans-unit>
       <trans-unit id="36">
-        <source>There are no users in the ranking.</source> <target state="needs-translation">Der er ingen brugere i denne rangliste.</target> </trans-unit>
+        <source>There are no users in the ranking.</source>
+        <target>Der er ingen brugere i denne rangliste.</target>
+      </trans-unit>
       <trans-unit id="37">
-        <source>Create ranking</source> <target state="needs-translation">Opret rangliste</target> </trans-unit>
+        <source>Create ranking</source>
+        <target>Opret rangliste</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
