--- a/src/Club/RequestBundle/Resources/translations/messages.da.xlf
+++ b/src/Club/RequestBundle/Resources/translations/messages.da.xlf
@@ -1,31 +1,55 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
   <file source-language="da" datatype="plaintext" original="file.ext">
     <body>
       <trans-unit id="1">
-        <source>Create comment</source> <target state="needs-translation">Opret kommentar</target> </trans-unit>
+        <source>Create comment</source>
+        <target>Opret kommentar</target>
+      </trans-unit>
       <trans-unit id="2">
-        <source>Play time</source> <target state="needs-translation">Spilletid</target> </trans-unit>
+        <source>Play time</source>
+        <target>Spilletid</target>
+      </trans-unit>
       <trans-unit id="3">
-        <source>User</source> <target state="needs-translation">Bruger</target> </trans-unit>
+        <source>User</source>
+        <target>Bruger</target>
+      </trans-unit>
       <trans-unit id="4">
-        <source>Message</source> <target state="needs-translation">Besked</target> </trans-unit>
-      <trans-unit id="5" approved="yes">
-        <source>Comments</source> <target state="translated">Kommentar</target> </trans-unit>
+        <source>Message</source>
+        <target>Besked</target>
+      </trans-unit>
+      <trans-unit id="5">
+        <source>Comments</source>
+        <target>Kommentar</target>
+      </trans-unit>
       <trans-unit id="6">
-        <source>Posted on %date% by %author%.</source> <target state="needs-translation">Oprettet den %date% af %author%.</target> </trans-unit>
+        <source>Posted on %date% by %author%.</source>
+        <target>Oprettet den %date% af %author%.</target>
+      </trans-unit>
       <trans-unit id="7">
-        <source>There are no comments for this request.</source> <target state="needs-translation">Der er ingen kommentarer til denne anmodning.</target> </trans-unit>
+        <source>There are no comments for this request.</source>
+        <target>Der er ingen kommentarer til denne anmodning.</target>
+      </trans-unit>
       <trans-unit id="8">
-        <source>Create request</source> <target state="needs-translation">Opret anmodning</target> </trans-unit>
+        <source>Create request</source>
+        <target>Opret anmodning</target>
+      </trans-unit>
       <trans-unit id="9">
-        <source>If you want to go play but dont have a partner, you can write in a timestamp here when you can play. Other can contact you and you can meet up and play a game.</source> <target state="needs-translation">Hvis du gerne vil spille men ikke har nogen makker kan du skriv her hvornår du ønsker at spille. Andre kan så kontakte dig og i kan mødes at spille.</target> </trans-unit>
+        <source>If you want to go play but dont have a partner, you can write in a timestamp here when you can play. Other can contact you and you can meet up and play a game.</source>
+        <target>Hvis du gerne vil spille men ikke har nogen makker kan du skriv her hvornår du ønsker at spille. Andre kan så kontakte dig og i kan mødes at spille.</target>
+      </trans-unit>
       <trans-unit id="10">
-        <source>Action</source> <target state="needs-translation">Handling</target> </trans-unit>
+        <source>Action</source>
+        <target>Handling</target>
+      </trans-unit>
       <trans-unit id="11">
-        <source>There are not requests in the players market.</source> <target state="needs-translation">Der er ingen anmodninger på spillerbørsen.</target> </trans-unit>
-      <trans-unit id="12" approved="yes">
-        <source>Market</source> <target state="translated">Spillermarked</target> </trans-unit>
+        <source>There are not requests in the players market.</source>
+        <target>Der er ingen anmodninger på spillerbørsen.</target>
+      </trans-unit>
+      <trans-unit id="12">
+        <source>Market</source>
+        <target>Spillermarked</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
